# CallMeRocki

./: .gitignore  pyproject.toml  readme.md
src/: main.py  settings.py
src/ai/: roc.py  stt.py  tts.py
src/api/: create_bot.py
src/callme_rocki.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/recall/: audio.py  events.py
